--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Binit Kumar- Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.svg">
+    <title>Binit Kumar</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/profile.svg">
   </head>
   <body>
     
