Navigation and cosmetic changes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <script src="assets/js/theme-toggle.js"></script>
+    <script src="assets/js/navigation.js"></script>
 </head>
 
 <body>
@@ -36,6 +37,7 @@
         <div class="nav-slider-container">
             <nav>
                 <ul>
+                    <li><a href="#home" id="nav-home">Home</a></li>
                     <li><a href="#education" id="nav-education">Education</a></li>
                     <li><a href="#skills" id="nav-skills">Skills</a></li>
                     <li><a href="#certifications" id="nav-certifications">Certifications</a></li>
