added docs and fixed certification links

--- a/index.html
+++ b/index.html
@@ -1181,7 +1181,7 @@
                     </svg>
                     <div class="card-content">
                         <p class="card-name">SharePoint Developer</p>
-                        <a href="#" class="card-link">[2012-Current]</a>
+                        <a href="assets/docs/sharepoint-certificate.pdf" class="card-link" target="_blank">Certificate</a>
                     </div>
                 </div>
                 <div class="card raised-card">
@@ -1198,8 +1198,8 @@
                     </svg>
                     <div class="card-content">
                         <p class="card-name">AWS Cloud Practitioner</p>
-                        <a href="https://www.credly.com/earner/earned/badge/91afbf5e-ff5e-4981-88ba-69a499860e57/public_url"
-                            class="card-link">Verification Link</a>
+                        <a href="https://www.credly.com/badges/91afbf5e-ff5e-4981-88ba-69a499860e57/public_url"
+                            class="card-link" target="_blank">Verification Link</a>
                     </div>
                 </div>
                 <div class="card raised-card">
@@ -1217,7 +1217,7 @@
                     <div class="card-content">
                         <p class="card-name">GitHub Foundations</p>
                         <a href="https://www.credly.com/badges/2955cdd3-8278-4ada-9eb2-8d23912f448c/public_url"
-                            class="card-link">Verification Link</a>
+                            class="card-link" target="_blank">Verification Link</a>
                     </div>
                 </div>
                 <div class="card raised-card">
