changes education section to add duration.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Binit Kumar</title>
-    <link rel="icon" type="image/x-icon" href="assets/images/common/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/images/profile.svg">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <script src="assets/js/theme-toggle.js"></script>
@@ -133,6 +133,9 @@
                         <div class="education-degree-title">
                             <p>Master of Science- Information Systems</p>
                         </div>
+                        <div class="education-grade-duration">
+                            <p>Duration: <b>2013-2015</b></p>
+                        </div>
                         <div class="education-grade-gpa">
                             <p>Grade: <b>4.0 GPA</b></p>
                         </div>
@@ -176,6 +179,9 @@
                     <div class="education-content">
                         <div class="education-degree-title">
                             <p>Bachelor of Technology- Electrical & Electronics Engineering</p>
+                        </div>
+                        <div class="education-grade-duration">
+                            <p>Duration: <b>2006-2010</b></p>
                         </div>
                         <div class="education-grade-gpa">
                             <p>Grade: <b>First Class with Distinction</b></p>
