Added descriptive text for SEO optimization.

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                 More details are available
                                 <a class="education-details-link light-theme"
                                     href="https://www.linkedin.com/in/binitkr/details/courses/"
-                                    target="_blank">here</a>.                               
+                                    target="_blank">here on my LinkedIn Profile</a>.                               
                             </p>
                         </div>
                         <div class="eduction-button-row">
@@ -223,7 +223,7 @@
                                 More details are available
                                 <a class="education-details-link light-theme"
                                     href="https://www.bvuniversity.edu.in/ug-programmes/b-tech-electrical-and-computer-engineering"
-                                    target="_blank">here</a>.
+                                    target="_blank">here on the University website</a>.
                             </p>
                         </div>
                         <div class="eduction-button-row">
