added aria label to input for accessibility.

--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
             </nav>
             <div class="flex-container">
                 <div class="slider-container">
-                    <input type="checkbox" id="slider" class="slider-checkbox" role="switch" aria-checked="false" aria-labelledby="slider-label">
-                    <label for="slider" id="slider-label" class="slider-label" aria-expanded="false">
-                    </label>
+                    <input type="checkbox" id="slider" class="slider-checkbox" role="switch" aria-checked="false" aria-labelledby="slider-label" aria-label="Slider Toggle">                    
+                    <label for="slider" id="slider-label" class="slider-label" aria-expanded="false"></label>
                 </div>
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
