accessibility, best practices and SEO are 100%, changes to preload font for better performance.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <meta name="author" content="Binit Kumar">
     <link rel="icon" type="image/x-icon" href="assets/images/profile.svg">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
+    </noscript>
     <script src="assets/js/theme-toggle.js"></script>
     <script src="assets/js/navigation.js"></script>
 </head>
