added responsive styles for hero section.

--- a/index.html
+++ b/index.html
@@ -76,14 +76,6 @@
 
     <main>        
         <section class="hero" id="home" aria-label="Introduction Section">
-            <div class="intro-text">
-                <h1>Hi, I am Binit!</h1>
-                <p>I'm a seasoned <span id="dynamic-text" aria-live="polite">developer</span></p>
-                <p>with a passion for creating amazing web experiences. I have worked with cloud technologies, front-end
-                    frameworks, and back-end languages. I am always eager to learn new technologies and improve my
-                    skills.
-                </p>
-            </div>
             <div class="hero-image">
                 <svg class="hero-mask light-theme" viewBox="0 0 479 467" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -114,6 +106,15 @@
                     </g>
                 </svg>
             </div>
+            <div class="intro-text">
+                <h1>Hi, I am Binit!</h1>
+                <p>I'm a seasoned</p>
+                <span id="dynamic-text" aria-live="polite"></span>
+                <p>with a passion for creating amazing web experiences. I have worked with cloud technologies, front-end
+                    frameworks, and back-end languages. I am always eager to learn new technologies and improve my
+                    skills.
+                </p>
+            </div>            
         </section>
         
         <section id="education">
