Added hamburger menu for responsive design.

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             </svg>
         </a>
     
-        <div class="nav-slider-container">
-            <nav aria-label="Main Navigation">
+        <div class="nav-slider-container">            
+            <nav aria-label="Main Navigation" class="nav-menu">
                 <ul>
                     <li><a href="#home" id="nav-home">Home</a></li>
                     <li><a href="#education" id="nav-education">Education</a></li>
@@ -55,7 +55,7 @@
                     <input type="checkbox" id="slider" class="slider-checkbox" role="switch" aria-checked="false" aria-labelledby="slider-label" aria-label="Slider Toggle">                    
                     <label for="slider" id="slider-label" class="slider-label"></label>
                 </div>
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="dark-mode-image" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                     <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
                     <g id="SVGRepo_iconCarrier">
@@ -71,7 +71,10 @@
                     </g>
                 </svg>
             </div>
-        </div>
+            <button class="hamburger-menu" aria-label="Toggle navigation">
+                &#9776;
+            </button>
+        </div>        
     </header>
 
     <main>        
