added Google verification meta tag.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Binit Kumar</title>
     <meta name="description" content="Personal website of Binit Kumar, showcasing portfolio.">
     <meta name="keywords" content="Binit Kumar, portfolio, web development, full stack developer, principal software engineer, software engineer, github, linkedin, professional, leader">
+    <meta name="google-site-verification" content="zpbk6707PfkP0wWAHdVIuplLLkScWu8V4aMoWiWFG1M" />
     <meta name="author" content="Binit Kumar">
     <link rel="icon" type="image/x-icon" href="assets/images/profile.svg">
     <link rel="stylesheet" href="assets/css/styles.css">
