Added copyright and year to footer

--- a/index.html
+++ b/index.html
@@ -1347,7 +1347,7 @@
                         <rect width="400" height="72" fill="white" />
                     </clipPath>
                 </defs>
-            </svg>
+            </svg> &#169; 2024
         </p>
     </footer>
 </body>
