Changes for responsive design

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>            
         </section>
         
-        <section id="education">
+        <section id="education" aria-label="Education Section">
             <h1>Education</h1>
             <div class="education-card-container">
                 <article class="education-card raised-card">
@@ -245,7 +245,7 @@
             </div>
         </section>
 
-        <section id="skills">
+        <section id="skills" aria-label="Skills Section">
             <h1>Skills</h1>
             <div class="skills-card-container">
                 <div class="skills-card raised-card">
@@ -1208,7 +1208,7 @@
             </div>
         </section>
 
-        <section id="certifications">
+        <section id="certifications" aria-label="Certifications Section">
             <h1>Certifications</h1>
             <div class="certifications-card-container">
                 <div class="certifications-card raised-card">
@@ -1284,7 +1284,7 @@
             </div>
         </section>
         
-        <section id="contact">
+        <section id="contact" aria-label="Contact Me Section">
             <h1>Contact Me</h1>
             <div class="contact-form">
                 <form action="https://formspree.io/f/mrbgzrnn" method="post">
