cosmetic changes for education description and dynamic text.

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                 More details are available
                                 <a class="education-details-link light-theme"
                                     href="https://www.linkedin.com/in/binitkr/details/courses/"
-                                    target="_blank">here on my LinkedIn Profile</a>.                               
+                                    target="_blank">here on my LinkedIn profile</a>.                               
                             </p>
                         </div>
                         <div class="eduction-button-row">
@@ -231,7 +231,7 @@
                                 More details are available
                                 <a class="education-details-link light-theme"
                                     href="https://www.bvuniversity.edu.in/ug-programmes/b-tech-electrical-and-computer-engineering"
-                                    target="_blank">here on the University website</a>.
+                                    target="_blank">here on the university website</a>.
                             </p>
                         </div>
                         <div class="eduction-button-row">
