--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Binit Kumar</title>
+    <title>Binit Kumar - Portfolio</title>
     <meta name="description" content="Personal website of Binit Kumar, showcasing portfolio.">
     <meta name="keywords" content="Binit Kumar, portfolio, web development, full stack developer, principal software engineer, software engineer, github, linkedin, professional, leader">
     <meta name="google-site-verification" content="zpbk6707PfkP0wWAHdVIuplLLkScWu8V4aMoWiWFG1M" />
@@ -1157,7 +1157,7 @@
                                 </g>
 
                             </svg>
-                            <label class="svg-label">PowrBI</label>
+                            <label class="svg-label">PowerBI</label>
                         </div>
 
                         <div class="svg-container">
