--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <meta name="google-site-verification" content="zpbk6707PfkP0wWAHdVIuplLLkScWu8V4aMoWiWFG1M" />
     <meta name="author" content="Binit Kumar">
     <link rel="icon" type="image/x-icon" href="assets/images/profile.svg">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles-min.css">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" as="style"
         onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
     </noscript>
-    <script src="assets/js/theme-toggle.js"></script>
-    <script src="assets/js/navigation.js"></script>
+    <script src="assets/js/theme-toggle-min.js"></script>
+    <script src="assets/js/navigation-min.js"></script>
 </head>
 
 <body>
