added offline certs and updated with certificate link in html

--- a/index.html
+++ b/index.html
@@ -461,12 +461,16 @@
                         <p class="certifications-card-name">Certified Scrum Master</p>
                         <a href="assets/docs/csm-certificate.pdf" class="certifications-card-link"
                             target="_blank">Certificate</a>
+                        <a href="https://bcert.me/sxqqwlnbu"
+                            class="certifications-card-link" target="_blank">Verification Link</a>
                     </div>
                 </div>
                 <div class="certifications-card raised-card">
                     <img class="certifications-card-logo" src="assets/images/main/certifications/aws.svg" alt="AWS Certification Badge"/>
                     <div class="certifications-card-content">
                         <p class="certifications-card-name">AWS Cloud Practitioner</p>
+                        <a href="assets/docs/aws-certificate.pdf"
+                            class="certifications-card-link" target="_blank">Certificate</a>
                         <a href="https://www.credly.com/badges/91afbf5e-ff5e-4981-88ba-69a499860e57/public_url"
                             class="certifications-card-link" target="_blank">Verification Link</a>
                     </div>
@@ -475,6 +479,8 @@
                     <img class="certifications-card-logo" src="assets/images/main/certifications/github.svg" alt="GitHub Certification Badge"/>
                     <div class="certifications-card-content">
                         <p class="certifications-card-name">GitHub Foundations</p>
+                        <a href="assets/docs/github-certificate.pdf"
+                            class="certifications-card-link" target="_blank">Certificate</a>
                         <a href="https://www.credly.com/badges/2955cdd3-8278-4ada-9eb2-8d23912f448c/public_url"
                             class="certifications-card-link" target="_blank">Verification Link</a>
                     </div>
