added syling to certifications section.

--- a/index.html
+++ b/index.html
@@ -451,45 +451,55 @@
                     <img class="certifications-card-logo" src="assets/images/main/certifications/sharepoint.svg" alt="SharePoint Certification Badge"/>
                     <div class="certifications-card-content">
                         <p class="certifications-card-name">SharePoint Developer</p>
-                        <a href="assets/docs/sharepoint-certificate.pdf" class="certifications-card-link"
+                        <div class="certifications-card-links">
+                            <a href="assets/docs/sharepoint-certificate.pdf" class="certifications-card-link certifications-card-solid-button"
                             target="_blank">Certificate</a>
+                        </div>                        
                     </div>
                 </div>
                 <div class="certifications-card raised-card">                    
                     <img class="certifications-card-logo" src="assets/images/main/certifications/csm.svg" alt="CSM Certification Badge"/>
                     <div class="certifications-card-content">
                         <p class="certifications-card-name">Certified Scrum Master</p>
-                        <a href="assets/docs/csm-certificate.pdf" class="certifications-card-link"
+                        <div class="certifications-card-links">                            
+                            <a href="https://bcert.me/sxqqwlnbu"
+                            class="certifications-card-link certifications-card-hollow-button" target="_blank">Verification Link</a>
+                            <a href="assets/docs/csm-certificate.pdf" class="certifications-card-link certifications-card-solid-button"
                             target="_blank">Certificate</a>
-                        <a href="https://bcert.me/sxqqwlnbu"
-                            class="certifications-card-link" target="_blank">Verification Link</a>
+                        </div>                        
                     </div>
                 </div>
                 <div class="certifications-card raised-card">
                     <img class="certifications-card-logo" src="assets/images/main/certifications/aws.svg" alt="AWS Certification Badge"/>
                     <div class="certifications-card-content">
                         <p class="certifications-card-name">AWS Cloud Practitioner</p>
-                        <a href="assets/docs/aws-certificate.pdf"
-                            class="certifications-card-link" target="_blank">Certificate</a>
-                        <a href="https://www.credly.com/badges/91afbf5e-ff5e-4981-88ba-69a499860e57/public_url"
-                            class="certifications-card-link" target="_blank">Verification Link</a>
+                        <div class="certifications-card-links">                            
+                            <a href="https://www.credly.com/badges/91afbf5e-ff5e-4981-88ba-69a499860e57/public_url"
+                            class="certifications-card-link certifications-card-hollow-button" target="_blank">Verification Link</a>
+                            <a href="assets/docs/aws-certificate.pdf"
+                            class="certifications-card-link certifications-card-solid-button" target="_blank">Certificate</a>
+                        </div>                        
                     </div>
                 </div>
                 <div class="certifications-card raised-card">
                     <img class="certifications-card-logo" src="assets/images/main/certifications/github.svg" alt="GitHub Certification Badge"/>
                     <div class="certifications-card-content">
                         <p class="certifications-card-name">GitHub Foundations</p>
-                        <a href="assets/docs/github-certificate.pdf"
-                            class="certifications-card-link" target="_blank">Certificate</a>
-                        <a href="https://www.credly.com/badges/2955cdd3-8278-4ada-9eb2-8d23912f448c/public_url"
-                            class="certifications-card-link" target="_blank">Verification Link</a>
+                        <div class="certifications-card-links">                            
+                            <a href="https://www.credly.com/badges/2955cdd3-8278-4ada-9eb2-8d23912f448c/public_url"
+                            class="certifications-card-link certifications-card-hollow-button" target="_blank">Verification Link</a>
+                            <a href="assets/docs/github-certificate.pdf"
+                            class="certifications-card-link certifications-card-solid-button" target="_blank">Certificate</a>
+                        </div>                        
                     </div>
                 </div>
                 <div class="certifications-card raised-card">
                     <img class="certifications-card-logo" src="assets/images/main/certifications/terraform.svg" alt="Terraform Certifiaction Badge" />
                     <div class="certifications-card-content">
                         <p class="certifications-card-name">TerraForm Associate</p>
-                        <a href="#" class="certifications-card-link">Verification Link</a>
+                        <div class="certifications-card-links">
+                            <a href="#" class="certifications-card-link certifications-card-hollow-button">Verification Link</a>
+                        </div>                        
                     </div>
                 </div>
             </div>
