responsive, performance done project done, PROD ready.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="google-site-verification" content="zpbk6707PfkP0wWAHdVIuplLLkScWu8V4aMoWiWFG1M" />
     <meta name="author" content="Binit Kumar">
     <link rel="icon" type="image/x-icon" href="assets/images/profile.svg">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles-min.css">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" as="style"
         onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
@@ -447,60 +447,60 @@
         <section id="certifications" aria-label="Certifications Section">
             <h1>Certifications</h1>
             <div class="certifications-card-container">
-                <div class="certifications-card raised-card">
-                    <img class="certifications-card-logo" src="assets/images/main/certifications/sharepoint.svg" alt="SharePoint Certification Badge"/>
+                <div class="certifications-card raised-card">                    
                     <div class="certifications-card-content">
-                        <p class="certifications-card-name">SharePoint Developer</p>
-                        <div class="certifications-card-links">
-                            <a href="assets/docs/sharepoint-certificate.pdf" class="certifications-card-link certifications-card-solid-button"
-                            target="_blank">Certificate</a>
-                        </div>                        
+                        <img class="certifications-card-logo" src="assets/images/main/certifications/sharepoint.svg" alt="SharePoint Certification Badge"/>
+                        <p class="certifications-card-name">SharePoint Developer</p>                                               
+                    </div>
+                    <div class="certifications-card-links">
+                        <a href="assets/docs/sharepoint-certificate.pdf" class="certifications-card-link certifications-card-solid-button"
+                        target="_blank">Certificate</a>
+                    </div> 
+                </div>
+                <div class="certifications-card raised-card">
+                    <div class="certifications-card-content">
+                        <img class="certifications-card-logo" src="assets/images/main/certifications/csm.svg" alt="CSM Certification Badge"/>
+                        <p class="certifications-card-name">Certified Scrum Master</p>                                                                       
+                    </div> 
+                    <div class="certifications-card-links">                            
+                        <a href="https://bcert.me/sxqqwlnbu"
+                        class="certifications-card-link certifications-card-hollow-button" target="_blank">Verification Link</a>
+                        <a href="assets/docs/csm-certificate.pdf" class="certifications-card-link certifications-card-solid-button"
+                        target="_blank">Certificate</a>
+                    </div>                   
+                </div>
+                <div class="certifications-card raised-card">                    
+                    <div class="certifications-card-content">
+                        <img class="certifications-card-logo" src="assets/images/main/certifications/aws.svg" alt="AWS Certification Badge"/>
+                        <p class="certifications-card-name">AWS Cloud Practitioner</p>                                               
+                    </div>
+                    <div class="certifications-card-links">                            
+                        <a href="https://www.credly.com/badges/91afbf5e-ff5e-4981-88ba-69a499860e57/public_url"
+                        class="certifications-card-link certifications-card-hollow-button" target="_blank">Verification Link</a>
+                        <a href="assets/docs/aws-certificate.pdf"
+                        class="certifications-card-link certifications-card-solid-button" target="_blank">Certificate</a>
+                    </div> 
+                </div>
+                <div class="certifications-card raised-card">                    
+                    <div class="certifications-card-content">
+                        <img class="certifications-card-logo" src="assets/images/main/certifications/github.svg" alt="GitHub Certification Badge"/>
+                        <p class="certifications-card-name">GitHub Foundations</p>                                                
+                    </div>
+                    <div class="certifications-card-links">                            
+                        <a href="https://www.credly.com/badges/2955cdd3-8278-4ada-9eb2-8d23912f448c/public_url"
+                        class="certifications-card-link certifications-card-hollow-button" target="_blank">Verification Link</a>
+                        <a href="assets/docs/github-certificate.pdf"
+                        class="certifications-card-link certifications-card-solid-button" target="_blank">Certificate</a>
                     </div>
                 </div>
                 <div class="certifications-card raised-card">                    
-                    <img class="certifications-card-logo" src="assets/images/main/certifications/csm.svg" alt="CSM Certification Badge"/>
                     <div class="certifications-card-content">
-                        <p class="certifications-card-name">Certified Scrum Master</p>
-                        <div class="certifications-card-links">                            
-                            <a href="https://bcert.me/sxqqwlnbu"
-                            class="certifications-card-link certifications-card-hollow-button" target="_blank">Verification Link</a>
-                            <a href="assets/docs/csm-certificate.pdf" class="certifications-card-link certifications-card-solid-button"
-                            target="_blank">Certificate</a>
-                        </div>                        
+                        <img class="certifications-card-logo" src="assets/images/main/certifications/terraform.svg" alt="Terraform Certifiaction Badge" />
+                        <p class="certifications-card-name">TerraForm Associate</p>                                               
                     </div>
-                </div>
-                <div class="certifications-card raised-card">
-                    <img class="certifications-card-logo" src="assets/images/main/certifications/aws.svg" alt="AWS Certification Badge"/>
-                    <div class="certifications-card-content">
-                        <p class="certifications-card-name">AWS Cloud Practitioner</p>
-                        <div class="certifications-card-links">                            
-                            <a href="https://www.credly.com/badges/91afbf5e-ff5e-4981-88ba-69a499860e57/public_url"
-                            class="certifications-card-link certifications-card-hollow-button" target="_blank">Verification Link</a>
-                            <a href="assets/docs/aws-certificate.pdf"
-                            class="certifications-card-link certifications-card-solid-button" target="_blank">Certificate</a>
-                        </div>                        
-                    </div>
-                </div>
-                <div class="certifications-card raised-card">
-                    <img class="certifications-card-logo" src="assets/images/main/certifications/github.svg" alt="GitHub Certification Badge"/>
-                    <div class="certifications-card-content">
-                        <p class="certifications-card-name">GitHub Foundations</p>
-                        <div class="certifications-card-links">                            
-                            <a href="https://www.credly.com/badges/2955cdd3-8278-4ada-9eb2-8d23912f448c/public_url"
-                            class="certifications-card-link certifications-card-hollow-button" target="_blank">Verification Link</a>
-                            <a href="assets/docs/github-certificate.pdf"
-                            class="certifications-card-link certifications-card-solid-button" target="_blank">Certificate</a>
-                        </div>                        
-                    </div>
-                </div>
-                <div class="certifications-card raised-card">
-                    <img class="certifications-card-logo" src="assets/images/main/certifications/terraform.svg" alt="Terraform Certifiaction Badge" />
-                    <div class="certifications-card-content">
-                        <p class="certifications-card-name">TerraForm Associate</p>
-                        <div class="certifications-card-links">
-                            <a href="#" class="certifications-card-link certifications-card-hollow-button">Verification Link</a>
-                        </div>                        
-                    </div>
+                    <div class="certifications-card-links">
+                        <a href="#" class="certifications-card-link certifications-card-hollow-button">Verification Link</a>
+                    </div> 
                 </div>
             </div>
         </section>
