Dynamically inject current year in footer.

--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
         <p>
             Made with ❤️ by
             <img class="footer-logo" src="assets/images/common/logo.svg" alt="WebSite Footer Logo" />
-            &#169; 2024
+            &#169; <span id="current-year"></span>
         </p>
     </footer>
 </body>
