update to eduction cards links.

--- a/index.html
+++ b/index.html
@@ -140,10 +140,9 @@
                                 as a software developer during this time.
                                 <br />
                                 <br />
-                                More details are available
+                                More details are available here on the university
                                 <a class="education-details-link light-theme"
-                                    href="https://www.linkedin.com/in/binitkr/details/courses/" target="_blank">here on
-                                    my LinkedIn profile</a>.
+                                    href="https://cdn.web.uta.edu/-/media/project/website/college-of-business/graduate/degree/ms-insy-f24.ashx" target="_blank">website</a>.
                             </p>
                         </div>
                         <div class="eduction-button-row">
@@ -192,10 +191,10 @@
                                 Computational algorithms, Computer softwares, programming languages and many more.
                                 <br />
                                 <br />
-                                More details are available
+                                More details are available here on the university 
                                 <a class="education-details-link light-theme"
                                     href="https://www.bvuniversity.edu.in/ug-programmes/b-tech-electrical-and-computer-engineering"
-                                    target="_blank">here on the university website</a>.
+                                    target="_blank">website</a>.
                             </p>
                         </div>
                         <div class="eduction-button-row">
