removed header image for dark mode. added new images for dark and light mode. Using style.css right now.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="google-site-verification" content="zpbk6707PfkP0wWAHdVIuplLLkScWu8V4aMoWiWFG1M" />
     <meta name="author" content="Binit Kumar">
     <link rel="icon" type="image/x-icon" href="assets/images/profile.svg">
-    <link rel="stylesheet" href="assets/css/styles-min.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" as="style"
         onload="this.onload=null;this.rel='stylesheet'">
     <noscript>
@@ -43,8 +43,7 @@
                     <input type="checkbox" id="slider" class="slider-checkbox" role="switch" aria-checked="false"
                         aria-labelledby="slider-label" aria-label="Slider Toggle">
                     <label for="slider" id="slider-label" class="slider-label"></label>
-                </div>
-                <img class="dark-mode-image" src="assets/images/common/dark-mode.svg" alt="Dark Mode Logo"/>
+                </div>                
             </div>
             <button class="hamburger-menu" aria-label="Toggle navigation">
                 &#9776;
