--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </nav>
             <div class="flex-container">
                 <div class="slider-container">
-                    <input type="checkbox" id="slider" class="slider-checkbox" role="switch" aria-checked="false"
+                    <input type="checkbox" id="slider" class="theme-switch" role="switch" aria-checked="false"
                         aria-labelledby="slider-label" aria-label="Slider Toggle">
                     <label for="slider" id="slider-label" class="slider-label"></label>
                 </div>                
